[gd_scene load_steps=8 format=3 uid="uid://vrp5gboirfgm"]

[ext_resource type="Script" uid="uid://dgddsy0uevwvh" path="res://scripts/ui/game_pause/game_pause.gd" id="1_gy32d"]
[ext_resource type="FontFile" uid="uid://d2pwmhru8ykyk" path="res://assets/fonts/monogram.ttf" id="1_rxemq"]
[ext_resource type="Texture2D" uid="uid://b7xii3clkvyxe" path="res://assets/sprites/ui/rect_3.png" id="2_m4e8b"]
[ext_resource type="Texture2D" uid="uid://q46h1rj32p7e" path="res://assets/sprites/ui/rect_6.png" id="3_0up8m"]
[ext_resource type="PackedScene" uid="uid://b2hbeuy6ofwwb" path="res://scenes/ui/main_menu/menu_item.tscn" id="4_8wu3y"]
[ext_resource type="PackedScene" uid="uid://df4n26hlh5twh" path="res://scenes/ui/main_menu/options/options.tscn" id="6_eonmi"]

[sub_resource type="LabelSettings" id="LabelSettings_0up8m"]
font = ExtResource("1_rxemq")
font_color = Color(0.666667, 0.635294, 0.364706, 1)

[node name="GamePause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gy32d")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -82.0
offset_right = 105.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0up8m")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -26.0
offset_right = 56.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="button_resume" parent="VBoxContainer" instance=ExtResource("4_8wu3y")]
unique_name_in_owner = true
layout_mode = 2
text = "RESUME"

[node name="button_options" parent="VBoxContainer" instance=ExtResource("4_8wu3y")]
unique_name_in_owner = true
layout_mode = 2
text = "OPTIONS"

[node name="button_exit" parent="VBoxContainer" instance=ExtResource("4_8wu3y")]
unique_name_in_owner = true
layout_mode = 2
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -66.0
offset_right = 35.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
text = "PAUSE"
label_settings = SubResource("LabelSettings_0up8m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_right = 9.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m4e8b")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Options" parent="." instance=ExtResource("6_eonmi")]
visible = false
layout_mode = 1
